force-app/main/default/objects/RSS_Feed_Related_Object__c/RSS_Feed_Related_Object__c.object-meta.xml
<CustomObject>
    <description>Allows you to link feeds to Accounts, Contacts, Opportunities, Campaigns</description>
    <label>RSS Feed Related Object</label>
    <nameField>
        <displayFormat>OBJ - {000000}</displayFormat>
        <label>RSS Feed Related Object Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RSS Feed Related Objects</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>