force-app/main/default/objects/RSS_Feed_Related_Object__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related RSS Feeds</relationshipLabel>
    <relationshipName>RSS_Feed_Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>