force-app/main/default/objects/RSS_Feed_Related_Object__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Related RSS Feeds</relationshipLabel>
    <relationshipName>RSS_Feed_Related_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>