force-app/main/default/objects/RSS_Feed_Related_Object__c/fields/RSS_Feed__c.field-meta.xml
<CustomField>
    <fullName>RSS_Feed__c</fullName>
    <label>RSS Feed</label>
    <referenceTo>RSS_Feed__c</referenceTo>
    <relationshipLabel>Related Objects</relationshipLabel>
    <relationshipName>RSS_Feed_Related_Objects</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>